# Tool_Test_API

Desktop/github/: temp
Desktop/github/curl/lib/: libcurl.so.4.7.0
Desktop/github/src/: api.cpp  api.hpp
Desktop/github/src/DefaultVariable/: define.h
Desktop/github/src/FaceMask/: FaceMask.cpp  FaceMask.hpp
Desktop/github/src/FaceRecognize/: FaceRecognize.cpp
Desktop/github/src/FireDetect/: FireDetect.hpp
Desktop/github/src/HttpClient/: HttpClient.cpp  HttpClient.hpp
Desktop/github/src/HttpSession/: HttpSession.hpp
Desktop/github/src/Json/: json.h
Desktop/github/src/PersonDetection/: PersonDetection.hpp
Desktop/github/src/SocialDistancing/: SocialDistancing.cpp  SocialDistancing.hpp
tool_test_api/: CMakeLists.txt
tool_test_api/curl/lib/: libcurl.la
tool_test_api/src/: main.cpp
tool_test_api/src/DefaultVariable/: tydef.h
tool_test_api/src/FaceRecognize/: FaceRecognize.hpp
tool_test_api/src/FireDetect/: FireDetect.cpp
tool_test_api/src/HttpSession/: HttpSession.cpp
tool_test_api/src/PersonDetection/: PersonDetection.cpp
tool_test_api/src/login/: Login.cpp  Login.hpp
